# Fractals-Platonic4D

./: .gitignore  CMakeLists.txt  README.md  Sponge.cpp  fShader.glsl  main.cpp  shader.h  sponge.h  tools.h  vShader.glsl
Exe/: Fractals-Platonic4D
headers/: Faces.h  Hypercube.h  Menu.h  MenuProperties.h  Sponge.h  Window.h  font.h  shader.h  sponge.h  tools.h  vectorTools.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
releases/Linux/shaders/: fOverlayShader.glsl  vShader.glsl
releases/Windows/shaders/: fShader.glsl  vOverlayShader.glsl
shaders/: fShader.glsl
src/: Menu.cpp  Sponge.cpp  Window.cpp  main.cpp  shader.cpp  shader.h  sponge.cpp  sponge.h  tools.cpp  vectorTools.cpp  window.h
